@@ -12,50 +12,32 @@ LINGUAS =
 EXTRA_DESKTOPS = gpe-shield.desktop.in 
 HELPFILE = gpe-shield.html
 
+GTKCFLAGS = `pkg-config --cflags gtk+-2.0 gdk-2.0`
+GTKLDFLAGS = `pkg-config --libs gtk+-2.0 gdk-2.0`
+
 ifeq ($(CVSBUILD),yes)
-GTKLDFLAGS += -L../libgpewidget -L.
-CFLAGS += -Wall -I../libgpewidget -I.
+PACKAGE_LDFLAGS += -L../libgpewidget -L.
+PACKAGE_CFLAGS += -I../libgpewidget -I.
 BUILD = ../build
 else
-GTKCFLAGS += -I$(PREFIX)/include/gpe
 BUILD = build
 endif
+
+PACKAGE_CPPFLAGS = $(STANDARD_CPPFLAGS)
+PACKAGE_CFLAGS += $(STANDARD_CFLAGS) $(GTKCFLAGS) $(GPECFLAGS)
+PACKAGE_LDFLAGS += $(STANDARD_LDFLAGS) $(GPELIBS) $(GTKLDFLAGS)
+
 
 MEMBERS  = main interface backend editrule
 
 ifeq ($(DEBUG),yes)
-CFLAGS += -g -DDEBUG
+PACKAGE_CFLAGS += -g -DDEBUG
 else
-CFLAGS += -Os -fomit-frame-pointer
+PACKAGE_CFLAGS += -Os -fomit-frame-pointer
 endif
 
-CFLAGS += -DVERSION=\"$(VERSION)\" -DPREFIX=\"$(PREFIX)\" -D_GNU_SOURCE
-CFLAGS += -DPACKAGE=\"$(PACKAGE)\" -DPACKAGE_LOCALE_DIR=\"$(PREFIX)/share/locale\"
-
-GTKCFLAGS += `pkg-config --cflags gtk+-2.0 gdk-pixbuf-2.0` 
-GTKLDFLAGS += `pkg-config --libs gtk+-2.0 gdk-2.0 gdk-pixbuf-2.0`
-
-# setup how to compile
-ifeq ($(NATIVE),yes)
-
-STRIP=strip
-CC=gcc
-
-CFLAGS += $(GTKCFLAGS) -Wall
-LDFLAGS += -lgpewidget $(GTKLDFLAGS)
-
-else # we do cross-compile...
-
-CC=arm-linux-gcc
-STRIP=arm-linux-strip
-
-CFLAGS += -march=armv4 -mtune=strongarm
-CFLAGS += $(GTKCFLAGS) -Wall 
-LDFLAGS += -lgpewidget $(GTKLDFLAGS) -Wall 
-LDFLAGS += -lXinerama
-
-endif #native or cross-compile
-
+PACKAGE_CFLAGS += -DVERSION=\"$(VERSION)\" -DPREFIX=\"$(PREFIX)\" -D_GNU_SOURCE
+PACKAGE_CFLAGS += -DPACKAGE=\"$(PACKAGE)\" -DPACKAGE_LOCALE_DIR=\"$(PREFIX)/share/locale\"
 
 OBJS = $(patsubst %,%.o,$(MEMBERS))
 DEPS = $(patsubst %,%.d,$(MEMBERS))
@@ -67,7 +49,7 @@ PIXMAPS = gpe-shield.png
 all: $(PACKAGE) 
 
 $(PACKAGE): $(OBJS)
-	$(CC) -g -o $@ $(OBJS) $(LDFLAGS) -lgpewidget $(GTKLDFLAGS)
+	$(CC) -g -o $@ $(OBJS) $(LDFLAGS) $(PACKAGE_LDFLAGS)
 
 install-program: $(PACKAGE) all-desktop
 	mkdir -p $(DESTDIR)/CONTROL
@@ -77,7 +59,7 @@ install-program: $(PACKAGE) all-desktop
 	$(INSTALL) $(PACKAGE) $(DESTDIR)$(PREFIX)/bin/$(PACKAGE)
 	$(STRIP) $(DESTDIR)$(PREFIX)/bin/$(PACKAGE)
 	mkdir -p $(DESTDIR)$(PREFIX)/share/pixmaps
-	for i in $(PIXMAPS); do install -m 644 -D pixmaps/$$i $(DESTDIR)$(PREFIX)/share/pixmaps/$$i; done
+	for i in $(PIXMAPS); do install -m 4755 -D pixmaps/$$i $(DESTDIR)$(PREFIX)/share/pixmaps/$$i; done
 	mkdir -p $(DESTDIR)$(PREFIX)/share/applications
 	$(INSTALL) -m 644 *.desktop $(DESTDIR)$(PREFIX)/share/applications
 	mkdir -p $(DESTDIR)$(PREFIX)/share/doc/gpe
